fixed footer overflow issue, created header issue

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,9 @@
 body {
     background-color: #314d85;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 100vh;
     }
 
 .brand {
@@ -180,9 +184,15 @@ body {
     max-width: 25%;
 }
 
+/* header styling */
+.header {
+    position: fixed;
+    top: 0;
+    margin-top: 100px;
+}
+
 /* footer styling */
 .footer {
-    position: fixed;
     width: 100%;
     bottom: 0px;
 }
@@ -200,7 +210,8 @@ body {
     background-color: black;
     opacity: 70%;
     border-radius: 75px;
-    width: 100%;
+    width: 60%;
+    margin-top: auto;
 }
 
 .search-form {
@@ -209,7 +220,7 @@ body {
 }
 
 .search-form form {
-    width: 100%;
+    width: 75%;
 }
 .search-form li {
     display: inline;
@@ -232,7 +243,7 @@ body {
     padding-right: 30px;
     padding-left: 30px;
     background-color: dimgrey;
-    opacity: 75%;
+    opacity: 70%;
 }
 
 /* home page title style */
